# blockchain-zig

./: .gitignore  README.md  build.zig  build.zig.zon
changes/: 2025-09-30-preserve-chunk-counting-state.md
solana/docs/: about_account.md  simple_account.md  simple_account_en.md
solana/solana-cli/: Cargo.toml  RADME.md
solana/solana-cli/src/: main.rs
solana/solana-cli/src/command/: accountinfo.rs  balance.rs  mint_token.rs  mod.rs  token_analysis.rs  transfer.rs
src/: main.zig  root.zig
