[package]
name = "solana-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = "4.5.48"
serde = "1.0.227"
serde_json = "1.0.145"
solana-account = { version = "3.0.0", features = ["serde"] }
solana-address = { version = "1.0.0", features = ["decode"] }
solana-cli-config = "3.0.4"
solana-client = "3.0.4"
solana-commitment-config = "3.0.0"
solana-sdk = "3.0.0"
thiserror = "2.0.16"
tokio = "1.47.1"
